[gd_scene load_steps=17 format=3 uid="uid://rbvsie7haujc"]

[ext_resource type="Script" path="res://src/enemies/undead_summon/undead_summon.gd" id="1_g8rwn"]
[ext_resource type="Texture2D" uid="uid://cjboty1dr2fby" path="res://assets/Undead executioner/Undead executioner puppet/png/summonAppear.png" id="1_xc31e"]
[ext_resource type="Texture2D" uid="uid://ddixl0n7einjn" path="res://assets/Undead executioner/Undead executioner puppet/png/summonIdle.png" id="2_c3827"]
[ext_resource type="Texture2D" uid="uid://dn54m7xki5xyq" path="res://assets/Undead executioner/Undead executioner puppet/png/summonDeath.png" id="3_q1nc4"]
[ext_resource type="PackedScene" uid="uid://cnejyrbhg1isj" path="res://src/hitbox/constant_dmg_hitbox.tscn" id="5_o2jgq"]
[ext_resource type="Script" path="res://src/attack/attack.gd" id="6_05mei"]
[ext_resource type="Script" path="res://src/health/health.gd" id="7_7jjol"]
[ext_resource type="Script" path="res://src/hurtbox/enemy_hurtbox.gd" id="8_456xe"]

[sub_resource type="Animation" id="Animation_fgjtm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_xc31e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dj0ok"]
resource_name = "appear"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_xc31e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_fryr5"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_q1nc4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_w3wij"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_c3827")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uoicg"]
_data = {
"RESET": SubResource("Animation_fgjtm"),
"appear": SubResource("Animation_dj0ok"),
"death": SubResource("Animation_fryr5"),
"idle": SubResource("Animation_w3wij")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_wgyvi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kbquw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ji6p0"]

[node name="UndeadSummon" type="CharacterBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 0
script = ExtResource("1_g8rwn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_xc31e")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uoicg")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 10)
shape = SubResource("CircleShape2D_wgyvi")

[node name="Attack" type="Node" parent="."]
script = ExtResource("6_05mei")
damage = 5

[node name="Health" type="Node" parent="."]
script = ExtResource("7_7jjol")
MAX_HEALTH = 20

[node name="ConstantDmgHitbox" parent="." node_paths=PackedStringArray("attack") instance=ExtResource("5_o2jgq")]
visible = false
attack = NodePath("../Attack")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConstantDmgHitbox"]
position = Vector2(-1, 10)
shape = SubResource("CircleShape2D_kbquw")

[node name="EnemyHurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
visible = false
script = ExtResource("8_456xe")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
position = Vector2(-1, 10)
shape = SubResource("CircleShape2D_ji6p0")

[node name="DamagePosition" type="Marker2D" parent="."]
position = Vector2(0, 5)

[connection signal="dead" from="Health" to="." method="_on_health_dead"]
[connection signal="hit" from="EnemyHurtbox" to="." method="_on_enemy_hurtbox_hit"]
